chore: add github link

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
   <body>
     <div class="app">
     </div>
+    <p>
+      <a href="https://github.com/Scarysize/redux-tab-sync">github</a>
+    </p>
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.28.0/mapbox-gl.js'></script>
     <script src="build/bundle.js"></script>
   </body>
